--- a/css/style.css
+++ b/css/style.css
@@ -301,6 +301,30 @@ body{
 .cuerpo-about{
     display: flex;
     height: 78vh;
-    align-items: center;
+    flex-direction: column;
+    justify-content: space-between;
 }
+
+.cuerpo-about__title{
+    display: flex;
+    justify-content: center;
+
+}
+
+.cuerpo-about__title__about{
+    color: #A4161A;
+    font-size: 100px;
+    margin-right: 10px;
+
+}
+
+.cuerpo-about__title__us{
+    font-size: 75px;
+    padding-top: 26px;
+    margin-left: 10px;
+
+}
+
+
+
 
